Stop distorting images in the carrossel

--- a/vintage-store-client/src/styles/base.css
+++ b/vintage-store-client/src/styles/base.css
@@ -3,6 +3,7 @@
   --black: #333333;
   --green: #6fcf97;
   --red: #eb5757;
+  --dark-red: #8d2121;
   --orange: #f2994a;
   --yellow: #f2c94c;
   --purple: #BB6BD9;
